# work-dash

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  run
.github/workflows/: deploy.yml
client/: Cargo.toml  README.md
client/src/: app.rs  aquarium.rs  bigtext.rs  main.rs  net.rs  seed.rs
client/src/ui/: break_screen.rs  calendar.rs  call_screen.rs  clock.rs  history.rs  idle.rs  kanban.rs  menu.rs  mod.rs
nixos/: README.md  configuration.nix  flake.nix
nixos/secrets/: secrets.nix  wifi.env.age  work-dash-pi.env.age
server/: Cargo.toml  Dockerfile
server/assets/: cms.css
server/migrations/: 0001_init.sql  0002_unread_count.sql
server/src/: auth.rs  calendar.rs  call.rs  cms.rs  db.rs  error.rs  events.rs  graph_webhook.rs  icons.rs  lib.rs  main.rs  models.rs  sse.rs  state.rs  tasks.rs  teams.rs  time.rs
server/tests/: api.rs
windows-client/: .gitignore  Cargo.toml  outlook_calendar_push.ps1  teams_day_capture.ps1
windows-client/examples/: mock_call_demo.rs
windows-client/packaging/: AppxManifest.xml  install-task.ps1  register.ps1  run_with_identity.ps1  uninstall-task.ps1  unregister.ps1
windows-client/src/: config.rs  diff.rs  lib.rs  main.rs  mapping.rs  models.rs  push.rs
windows-client/src/graph/: auth.rs  calendar.rs  mod.rs  presence.rs  subscriptions.rs  token_cache.rs
windows-client/src/teams/: classify.rs  listener_mock.rs  listener_win.rs  logtail.rs  mod.rs  source.rs  unread.rs  window_win.rs
