[workspace]

[package]
name = "work-dash-windows-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
keyring = "3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "UI_Notifications",
    "UI_Notifications_Management",
    "ApplicationModel",
    "Foundation",
    "Foundation_Collections",
    "Win32_Foundation",
    "Win32_Storage_Packaging_Appx",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
